; ModuleID = '/home/carl/AnghaBench/linux/drivers/media/pci/saa7164/extr_saa7164-encoder.c_saa7164_g_tuner.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/media/pci/saa7164/extr_saa7164-encoder.c_saa7164_g_tuner.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.file = type { %struct.saa7164_encoder_fh* }
%struct.saa7164_encoder_fh = type { %struct.saa7164_port* }
%struct.saa7164_port = type { %struct.saa7164_dev* }
%struct.saa7164_dev = type { i32 }
%struct.v4l2_tuner = type { i64, i32, i32, i32, i32, i32 }

@EINVAL = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [6 x i8] c"tuner\00", align 1
@V4L2_TUNER_CAP_NORM = common dso_local global i32 0, align 4
@V4L2_TUNER_CAP_STEREO = common dso_local global i32 0, align 4
@SAA7164_TV_MIN_FREQ = common dso_local global i32 0, align 4
@SAA7164_TV_MAX_FREQ = common dso_local global i32 0, align 4
@DBGLVL_ENC = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [31 x i8] c"VIDIOC_G_TUNER: tuner type %d\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @saa7164_g_tuner(%struct.file* %0, i8* %1, %struct.v4l2_tuner* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.file*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca %struct.v4l2_tuner*, align 8
  %8 = alloca %struct.saa7164_encoder_fh*, align 8
  %9 = alloca %struct.saa7164_port*, align 8
  %10 = alloca %struct.saa7164_dev*, align 8
  store %struct.file* %0, %struct.file** %5, align 8
  store i8* %1, i8** %6, align 8
  store %struct.v4l2_tuner* %2, %struct.v4l2_tuner** %7, align 8
  %11 = load %struct.file*, %struct.file** %5, align 8
  %12 = getelementptr inbounds %struct.file, %struct.file* %11, i32 0, i32 0
  %13 = load %struct.saa7164_encoder_fh*, %struct.saa7164_encoder_fh** %12, align 8
  store %struct.saa7164_encoder_fh* %13, %struct.saa7164_encoder_fh** %8, align 8
  %14 = load %struct.saa7164_encoder_fh*, %struct.saa7164_encoder_fh** %8, align 8
  %15 = getelementptr inbounds %struct.saa7164_encoder_fh, %struct.saa7164_encoder_fh* %14, i32 0, i32 0
  %16 = load %struct.saa7164_port*, %struct.saa7164_port** %15, align 8
  store %struct.saa7164_port* %16, %struct.saa7164_port** %9, align 8
  %17 = load %struct.saa7164_port*, %struct.saa7164_port** %9, align 8
  %18 = getelementptr inbounds %struct.saa7164_port, %struct.saa7164_port* %17, i32 0, i32 0
  %19 = load %struct.saa7164_dev*, %struct.saa7164_dev** %18, align 8
  store %struct.saa7164_dev* %19, %struct.saa7164_dev** %10, align 8
  %20 = load %struct.v4l2_tuner*, %struct.v4l2_tuner** %7, align 8
  %21 = getelementptr inbounds %struct.v4l2_tuner, %struct.v4l2_tuner* %20, i32 0, i32 0
  %22 = load i64, i64* %21, align 8
  %23 = icmp ne i64 0, %22
  br i1 %23, label %24, label %27

24:                                               ; preds = %3
  %25 = load i32, i32* @EINVAL, align 4
  %26 = sub nsw i32 0, %25
  store i32 %26, i32* %4, align 4
  br label %48

27:                                               ; preds = %3
  %28 = load %struct.v4l2_tuner*, %struct.v4l2_tuner** %7, align 8
  %29 = getelementptr inbounds %struct.v4l2_tuner, %struct.v4l2_tuner* %28, i32 0, i32 5
  %30 = load i32, i32* %29, align 8
  %31 = call i32 @strscpy(i32 %30, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0), i32 4)
  %32 = load i32, i32* @V4L2_TUNER_CAP_NORM, align 4
  %33 = load i32, i32* @V4L2_TUNER_CAP_STEREO, align 4
  %34 = or i32 %32, %33
  %35 = load %struct.v4l2_tuner*, %struct.v4l2_tuner** %7, align 8
  %36 = getelementptr inbounds %struct.v4l2_tuner, %struct.v4l2_tuner* %35, i32 0, i32 1
  store i32 %34, i32* %36, align 8
  %37 = load i32, i32* @SAA7164_TV_MIN_FREQ, align 4
  %38 = load %struct.v4l2_tuner*, %struct.v4l2_tuner** %7, align 8
  %39 = getelementptr inbounds %struct.v4l2_tuner, %struct.v4l2_tuner* %38, i32 0, i32 4
  store i32 %37, i32* %39, align 4
  %40 = load i32, i32* @SAA7164_TV_MAX_FREQ, align 4
  %41 = load %struct.v4l2_tuner*, %struct.v4l2_tuner** %7, align 8
  %42 = getelementptr inbounds %struct.v4l2_tuner, %struct.v4l2_tuner* %41, i32 0, i32 3
  store i32 %40, i32* %42, align 8
  %43 = load i32, i32* @DBGLVL_ENC, align 4
  %44 = load %struct.v4l2_tuner*, %struct.v4l2_tuner** %7, align 8
  %45 = getelementptr inbounds %struct.v4l2_tuner, %struct.v4l2_tuner* %44, i32 0, i32 2
  %46 = load i32, i32* %45, align 4
  %47 = call i32 @dprintk(i32 %43, i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str.1, i64 0, i64 0), i32 %46)
  store i32 0, i32* %4, align 4
  br label %48

48:                                               ; preds = %27, %24
  %49 = load i32, i32* %4, align 4
  ret i32 %49
}

declare dso_local i32 @strscpy(i32, i8*, i32) #1

declare dso_local i32 @dprintk(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
